--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="stats">
               Axiom: "<span id="AxiomText">None</span>" <br/>
 
-              Iterations: <span id="SentenceIterations">0</span> <br/>
+              Generations: <span id="SentenceIterations">0</span> <br/>
               Angle: <span id="AngleStats">0</span> <br/>
               <br/>
               Rules: <br/>
